# SignalHarness

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE.md  README.md  README.zh-CN.md  pyproject.toml
.agents/: action-planner-agent.md  context-evidence-agent.md  impact-analyst-agent.md  learning-policy-agent.md  signal-supervisor-agent.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
configs/: project_profile.yaml  signal_policy.yaml  watchlist.yaml
configs/model_profiles/: deepseek.yaml  kimi.yaml  openai_gpt4o_mini.yaml  qwen.yaml
docs/: AGENT_FLOW.md  AGENT_HARNESS_REVIEW.md  ARCHITECTURE_DECISIONS.md  DATA_FLOW.md  DEMO_SCRIPT.md  INTERVIEW_GUIDE.md  LLM_AGENT_ARCHITECTURE.md  MODEL_EVAL_REPORT.md  MODEL_EVAL_RESULTS.md  OPENHARNESS_INTEGRATION.md  PROVIDER_INTEGRATION.md  REAL_SOURCE_SMOKE.md  REPAIR_PASS.md  RUN_MODES.md  SCHEDULED_RUNS.md  SELF_IMPROVEMENT_LOOP.md  SHOWCASE.md  SIGNAL_HARNESS.md  SMOKE_TEST_AGENT_MODE.md  TESTING_AND_VISUALIZATION.md  UPSTREAM_ATTRIBUTION.md
examples/scheduled/: crontab.example  github-actions.yml  launchd.example.plist
examples/signal_harness/: README.md  eval_multisource_events.json  project_profile.yaml  sample_events.json  signal_policy.yaml  watchlist.yaml
scripts/: model_eval_matrix.sh
src/signal_harness/: __init__.py  cli.py  evals.py
tests/: conftest.py  test_hooks_skills_plugins_real.py  test_merged_prs_on_autoagent.py  test_real_large_tasks.py  test_untested_features.py
tests/signal_harness/: test_agent_loop_limits.py  test_agents.py  test_clustering.py  test_docs_polish.py  test_eval_harness.py  (+20 more)
(+111 files in other folders)
