[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalharness"
version = "0.1.0"
description = "Standalone LLM-enhanced multi-agent signal intelligence harness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SignalHarness Contributors" },
]

dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
providers = [
    "openai>=1.0.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.40.0",
]
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
signal-harness = "signal_harness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_harness"]

[tool.hatch.build]
exclude = [
    "/.git",
    "/.venv",
    "/.pytest_cache",
    "/.mypy_cache",
    "/.ruff_cache",
    "/build",
    "/dist",
]

[tool.hatch.build.targets.wheel.force-include]
"src/signal_harness/py.typed" = "signal_harness/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "manual: manual smoke or real API tests skipped from default public CI",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["signal_harness.tools.*"]
disallow_subclassing_any = false
